# newssurvey

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
analysis/: measure_tiktoken_count_correctness.py
archive/: READMDE.md  README.md  hext.py  openai_.py  order_final_sections_iterative.py  order_final_sections_lem.py  order_final_sections_rank.py
archive/7. rate_articles/: types.py
archive/filter_article_sentences/: 7. filter_article_sentences.txt  README.md
archive/list_draft_sections/: 3. list_draft_sections.txt  list_draft_sections.py
archive/list_final_sections/: README.md  list_final_sections-iterative.py  list_final_sections-oneshot_using_draft_sections.py
archive/map_final_sections/: README.md  map_final_sections-incomplete.py
archive/order_final_sections/: 5. order_final_sections-iterative.txt  5. order_final_sections-rank.txt  README.md  order_final_sections-iterative.py  order_final_sections-lem.py  order_final_sections-rank.py
archive/rate_articles/: types.py
archive/split_article_sentences/: 6. split_article_sentences.txt  README.md
docs/: RELEASE.md
docs/samples/: 2024-09-15T03:59:45 Nutritional Strategies and Supplements for Managing Anxiety in Adults.html  2024-09-15T06:04:01 Comprehensive Approaches to Managing GERD: From Lifestyle Changes to Emerging Treatments.html  2024-09-25T21:53:00 Nutritional Interventions and Supplements for Managing Anxiety in Adults.html  2024-09-25T22:34:17 Nutritional Interventions and Supplements for Managing Anxiety in Adults.html  2024-09-28T17:05:37 Exploring Multiverse Theories: Concepts, Evidence, and Implications.html  2024-09-28T21:26:11 Software Tools and Technological Advances in Synthetic Biology.html  2024-09-30T14:38:26 Nutritional Interventions and Supplements for Managing Anxiety in Adults.html  README.md  (+4 more)
prompts/: 0. common.txt  1. search.txt
samples/: 2024-09-10T08:24:25 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.gfm.md  2024-09-10T08:26:17 Holistic Management Strategies for Vascular Dementia in Elderly Patients.gfm.md  2024-09-10T17:41:15 Managing Daytime Drowsiness: Understanding Causes and Solutions.gfm.md  2024-09-10T18:44:29 Eastern Equine Encephalitis: Prevention, Diagnosis, and Management in the Northeast.gfm.md  2024-09-10T20:05:46 Eastern Equine Encephalitis: Prevention, Diagnosis, and Management in the Northeast.html  2024-09-10T23:48:45 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.gfm.md  2024-09-10T23:50:13 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.html  2024-09-10T23:54:33 Managing Daytime Drowsiness: Understanding Causes and Solutions.gfm.md  2024-09-10T23:56:33 Managing Daytime Drowsiness: Understanding Causes and Solutions.html  2024-09-11T01:58:39 Holistic Management Strategies for Vascular Dementia in Elderly Patients.html  2024-09-11T02:13:01 Managing Daytime Drowsiness: Understanding Causes and Solutions.gfm.md  2024-09-11T02:20:37 Managing Daytime Drowsiness: Understanding Causes and Solutions.html  2024-09-11T02:33:00 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.gfm.md  2024-09-11T02:51:12 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.html  2024-09-11T02:52:36 Eastern Equine Encephalitis: Prevention, Diagnosis, and Management in the Northeast.gfm.md  2024-09-11T02:53:50 Eastern Equine Encephalitis: Prevention, Diagnosis, and Management in the Northeast.html  2024-09-11T19:48:19 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.gfm.md  2024-09-11T19:49:33 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.html  2024-09-12T02:27:35 Advancements and Emerging Techniques in Neuroradiology.gfm.md  2024-09-12T02:33:59 Advancements and Emerging Techniques in Neuroradiology.html  2024-09-12T04:57:29 Comprehensive Approaches to Sciatica and Bursitis Pain Management in Older Adults.gfm.md  2024-09-13T09:45:28 Comprehensive Approaches and Treatments for Managing GERD Symptoms.gfm.md  2024-09-13T09:45:51 Comprehensive Approaches and Treatments for Managing GERD Symptoms.html  2024-09-14T03:02:09 Comprehensive Strategies for GERD Management: Lifestyle, Medications, and Emerging Therapies.gfm.md  2024-09-14T03:04:23 Comprehensive Strategies for GERD Management: Lifestyle, Medications, and Emerging Therapies.html  2024-09-14T03:07:55 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.gfm.md  2024-09-14T03:09:28 Nutrition and Supplements for Anxiety Relief in Adults: Insights from Recent Research.html  2024-09-14T04:33:51 Understanding Daytime Drowsiness and Strategies to Improve Nighttime Sleep.gfm.md  2024-09-14T04:36:12 Understanding Daytime Drowsiness and Strategies to Improve Nighttime Sleep.html  2024-09-15T03:47:01 Nutritional Strategies and Supplements for Managing Anxiety in Adults.gfm.md  2024-09-15T04:53:48 Understanding and Addressing Daytime Drowsiness: Causes, Strategies, and Solutions.gfm.md  2024-09-15T05:27:48 Understanding and Addressing Daytime Drowsiness: Causes, Strategies, and Solutions.html  2024-09-15T05:33:50 Eastern Equine Encephalitis: Prevention, Diagnosis, and Management in the Northeast.html  2024-09-15T05:58:44 Advances in Neuroradiology: Innovations, Imaging, and Interventions.gfm.md  2024-09-15T06:02:50 Comprehensive Approaches to Managing GERD: From Lifestyle Changes to Emerging Treatments.gfm.md  2024-09-17T07:16:16 "Theories of Dark Matter: Standard, Alternatives, and Emerging Perspectives".gfm.md  2024-09-17T07:17:27 "Theories of Dark Matter: Standard, Alternatives, and Emerging Perspectives".html  2024-09-17T07:37:11 Comprehensive Exploration of Dark Matter Theories and Alternatives.gfm.md  2024-09-17T07:38:30 Comprehensive Exploration of Dark Matter Theories and Alternatives.html  2024-09-17T15:33:23 Comprehensive Exploration of Dark Matter Theories and Alternatives.gfm.md  (+3 more)
src/mednewsqa/: __main__.py  config.py  (+2 more)
(+131 files in other folders)
