[project]
name = "newsqa"
version = "0.1.0"
description = "News Q&A using a supported news site and GPT-4"
authors = [
    { name = "Ouroboros Chrysopoeia", email = "impredicative@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
    "diskcache>=5.6.3",
    "hext>=1.0.9",
    "numpy>=2.1.0",  # https://github.com/numpy/numpy/releases https://numpy.org/doc/stable/release.html https://numpy.org/news/
    "openai>=1.42.0",  # https://github.com/openai/openai-python/releases
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scipy>=1.14.1",  # https://github.com/scipy/scipy/releases https://docs.scipy.org/doc/scipy/release.html
    "tiktoken>=0.7.0",  # https://github.com/openai/tiktoken/blob/main/CHANGELOG.md
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
universal = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/newsqa"]

[project.scripts]
newsqa = "newsqa.__main__:main"

[tool.rye.scripts]  # Run as "rye run <command>"
check = { chain = ["check-lint", "check-fmt" ] }
"check-lint" = "rye lint"
"check-fmt" = "rye fmt --check"
fix = { chain = ["fix-lint", "fix-fmt" ] }
"fix-lint" = "rye lint --fix"
"fix-fmt" = "rye fmt"
lockup = "rye lock --update-all"
syncup = "rye sync --update-all"

[tool.ruff]
line-length = 500

[tool.ruff.lint]
ignore = ["E731"]
